# AutoCCV

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/autoccv/: SKILL.md
autoccv/: __init__.py  ccvgen.py  clean.py  doi.py  generate.py  merge.py  resolver.py  validate.py
build_tools/: _common.py  extract_catalogs.py  extract_section_paths.py  extract_skeleton.py
data/: lov_catalog.json  reftable_catalog.json  section_map.json  section_paths.json  skeleton.xml
examples/: sample_cv_data.json  seed_minimal.xml
schema/: cv_data.schema.json
tests/: test_clean_importsafe.py  test_generate_validity.py  test_resolver.py  test_roundtrip.py
